Se actualizo CV

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             
             <p>¡Hola! Soy Erika. Desarrolladora Full-Stack Java.La tecnología, el diseño y el desarrollo web son mis pasiones. Soy una persona creativa y en constante busqueda de conocimiento y herramientas nuevas para poder aplicar.</p>
-            <a href="./assets/img/CV/CV-ERIKA ESPECHE..pdf" target="_blank"><iconify-icon icon="academicons:cv-square" width="40px" heigth="40px"></iconify-icon></a>
+            <a href="./assets/img/CV/CV-ERIKA ESPECHE.pdf" target="_blank"><iconify-icon icon="academicons:cv-square" width="40px" heigth="40px"></iconify-icon></a>
 
             
            <div class="row">
