--- a/index.html
+++ b/index.html
@@ -149,9 +149,11 @@
 
           <div class="col-lg-6" data-aos="fade-up">
 
+              <img src="./assets/img/lenguajes-iconos/C++ icono.png" alt="C++" width="50" height="50"/>  
               <img src="./assets/img/lenguajes-iconos/python_original_wordmark_logo_icon_146382.ico" alt="python" width="80" height="80"/>
               <img src="./assets/img/lenguajes-iconos/java_original_wordmark_logo_icon_146459.ico" alt="java" width="70" height="70"/> 
               <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg" alt="javascript" width="50" height="50"/> </a>
+              <img src="./assets/img/lenguajes-iconos/SQL logo.png" alt="C++" width="50" height="50"/> 
               <img src="./assets/img/lenguajes-iconos/mysql_original_wordmark_logo_icon_146417.ico" alt="mysql" width="70" height="70"/> 
               <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg" alt="html5" width="50" height="50"/> </a> 
               <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original-wordmark.svg" alt="css3" width="50" height="50"/> </a>
